Remove Notice Banner

--- a/index.html
+++ b/index.html
@@ -1,174 +1,8 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-    <title>NASA Open Source Software</title>
-    <meta name="description" content="Find Open Source Software Projects from NASA.">
-    <meta name="keywords" content="NASA, Open Source, Open Source Projects, NASA Open Source, NASA Projects, Projects from NASA, NASA Software, Software">
-
-    <link rel="icon" href="/images/favicon.ico">
-
-    <!-- See https://goo.gl/OOhYW5 -->
-    <link rel="manifest" href="/manifest.json">
-
-    <!-- See https://goo.gl/qRE0vM -->
-    <meta name="theme-color" content="#212121">
-
-    <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="NASA OSS">
-
-    <!-- Add to homescreen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="NASA OSS">
-
-    <!-- Homescreen icons -->
-    <link rel="apple-touch-icon" href="/images/logos/nasa-48.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/logos/nasa-72.png">
-    <link rel="apple-touch-icon" sizes="96x96" href="/images/logos/nasa-96.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/images/logos/nasa-144.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="/images/logos/nasa-192.png">
-
-    <!-- Tile icon for Windows 8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="/images/logos/nasa-144.png">
-    <meta name="msapplication-TileColor" content="#212121">
-    <meta name="msapplication-tap-highlight" content="no">
-
-    <script>
-      // Setup Polymer options
-      window.Polymer = {
-        dom: 'shadow',
-        lazyRegister: true
-      };
-
-      // Load webcomponentsjs polyfill if browser does not support native Web Components
-      (function() {
-        'use strict';
-
-        var onload = function() {
-          // For native Imports, manually fire WebComponentsReady so user code
-          // can use the same code path for native and polyfill'd imports.
-          if (!window.HTMLImports) {
-            document.dispatchEvent(
-              new CustomEvent('WebComponentsReady', {bubbles: true})
-            );
-          }
-        };
-
-        var webComponentsSupported = (
-          'registerElement' in document
-          && 'import' in document.createElement('link')
-          && 'content' in document.createElement('template')
-        );
-
-        if (!webComponentsSupported) {
-          var script = document.createElement('script');
-          script.async = true;
-          script.src = '/bower_components/webcomponentsjs/webcomponents-lite.min.js';
-          script.onload = onload;
-          document.head.appendChild(script);
-        } else {
-          onload();
-        }
-      })();
-
-      // Load pre-caching Service Worker
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-          navigator.serviceWorker.register('/service-worker.js');
-        });
-      }
-    </script>
-
-    <!-- We participate in the US government's analytics program. See the data at analytics.usa.gov. --> 
-    <script async type="text/javascript" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=AGENCY" id="_fed_an_ua_tag"></script>
-
-    <link itemprop="url" rel="import" href="/src/code-nasa-app.html">
-
-    <style>
-      @font-face {
-        font-family: 'ArcaMajora3-Bold';
-        src:  url('/fonts/ArcaMajora3-Bold.woff2') format('woff2'),
-              url('/fonts/ArcaMajora3-Bold.woff') format('woff');
-      }
-
-      @font-face {
-        font-family: 'ArcaMajora3-Heavy';
-        src:  url('/fonts/ArcaMajora3-Heavy.woff2') format('woff2'),
-              url('/fonts/ArcaMajora3-Heavy.woff') format('woff');
-      }
-
-      body {
-        margin: 0;
-        font-family: sans-serif;
-        background: #212121;
-        color: #DDD;
-      }
-
-      code-nasa-app {
-        display: block;
-        min-height: 100vh;
-      }
-
-      footer {
-        padding: 24px 36px;
-        text-align: center;
-        font-size: 12px;
-      }
-
-      a {
-        color: #FFF;
-        font-weight: bold;
-        text-decoration: none;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
-
-      @media (min-width: 768px) {
-        footer {
-          position: relative;
-          text-align: left;
-        }
-
-        .last {
-          position: absolute;
-          top: 24px;
-          right: 36px;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <code-nasa-app></code-nasa-app>
-
-    <footer>
-      <p itemprop="title">
-        NASA Officials:
-        <a itemprop="email" href="mailto:travis.kantz@nasa.gov" target="_blank">Travis Kantz</a>
-      </p>
-      <p class="last">
-        <a itemprop="url" href="https://www.nasa.gov/about/highlights/HP_Privacy.html" target="_blank">
-          Privacy Policy
-        </a>
-        |
-        <a itemprop="url" href="http://open.nasa.gov/" target="_blank">
-          A NASA Open Government Initiative Website
-        </a>
-      </p>
-    </footer>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1,user-scalable=yes"><title>NASA Open Source Software</title><meta name="description" content="Find Open Source Software Projects from NASA."><meta name="keywords" content="NASA, Open Source, Open Source Projects, NASA Open Source, NASA Projects, Projects from NASA, NASA Software, Software"><link rel="icon" href="/images/favicon.ico"><link rel="manifest" href="/manifest.json"><meta name="theme-color" content="#212121"><meta name="mobile-web-app-capable" content="yes"><meta name="application-name" content="NASA OSS"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"><meta name="apple-mobile-web-app-title" content="NASA OSS"><link rel="apple-touch-icon" href="/images/logos/nasa-48.png"><link rel="apple-touch-icon" sizes="72x72" href="/images/logos/nasa-72.png"><link rel="apple-touch-icon" sizes="96x96" href="/images/logos/nasa-96.png"><link rel="apple-touch-icon" sizes="144x144" href="/images/logos/nasa-144.png"><link rel="apple-touch-icon" sizes="192x192" href="/images/logos/nasa-192.png"><meta name="msapplication-TileImage" content="/images/logos/nasa-144.png"><meta name="msapplication-TileColor" content="#212121"><meta name="msapplication-tap-highlight" content="no"><script>// Setup Polymer options
+window.Polymer={dom:"shadow",lazyRegister:!0};// Load webcomponentsjs polyfill if browser does not support native Web Components
+(function(){'use strict';var onload=function(){// For native Imports, manually fire WebComponentsReady so user code
+// can use the same code path for native and polyfill'd imports.
+if(!window.HTMLImports){document.dispatchEvent(new CustomEvent("WebComponentsReady",{bubbles:!0}))}},webComponentsSupported="registerElement"in document&&"import"in document.createElement("link")&&"content"in document.createElement("template");if(!webComponentsSupported){var script=document.createElement("script");script.async=!0;script.src="/bower_components/webcomponentsjs/webcomponents-lite.min.js";script.onload=onload;document.head.appendChild(script)}else{onload()}})();// Load pre-caching Service Worker
+if("serviceWorker"in navigator){window.addEventListener("load",function(){navigator.serviceWorker.register("/service-worker.js")})}</script><script async="" type="text/javascript" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=AGENCY" id="_fed_an_ua_tag"></script><link itemprop="url" rel="import" href="/src/code-nasa-app.html"><style>@font-face{font-family:'ArcaMajora3-Bold';src:url('/fonts/ArcaMajora3-Bold.woff2') format('woff2'),
+              url('/fonts/ArcaMajora3-Bold.woff') format('woff');}@font-face{font-family:'ArcaMajora3-Heavy';src:url('/fonts/ArcaMajora3-Heavy.woff2') format('woff2'),
+              url('/fonts/ArcaMajora3-Heavy.woff') format('woff');}body{margin:0;font-family:sans-serif;background:#212121;color:#DDD;}code-nasa-app{display:block;min-height:100vh;}footer{padding:24px 36px;text-align:center;font-size:12px;}a{color:#FFF;font-weight:bold;text-decoration:none;}a:hover{text-decoration:underline;}@media (min-width: 768px){footer{position:relative;text-align:left;}.last{position:absolute;top:24px;right:36px;}}</style></head><body><code-nasa-app></code-nasa-app><footer><p itemprop="title">NASA Officials: <a itemprop="email" href="mailto:travis.kantz@nasa.gov" target="_blank">Travis Kantz</a></p><p class="last"><a itemprop="url" href="https://www.nasa.gov/about/highlights/HP_Privacy.html" target="_blank">Privacy Policy </a>| <a itemprop="url" href="http://open.nasa.gov/" target="_blank">A NASA Open Government Initiative Website</a></p></footer></body></html>
