--- a/src/code-nasa-experiments.html
+++ b/src/code-nasa-experiments.html
@@ -1,133 +1,1 @@
-<html><head><meta charset="UTF-8"><link rel="import" href="code-nasa-app.html"></head><body><dom-module id="code-nasa-experiments">
-  <template strip-whitespace="">
-    <style include="shared-styles">
-      :host {
-        display: block;
-        background-color: #000;
-        background-image: url('/images/backgrounds/share.jpg');
-        background-repeat: no-repeat;
-        background-position: center top;
-        background-size: 250%;
-        font-size: 16px;
-        line-height: 24px;
-      }
-
-      span.desktop-only {
-        display: none;
-      }
-
-      .section {
-        text-align: center;
-        margin-top:4em;
-      }
-
-      .section::before {
-        display: block;
-        margin: 0 auto;
-        content: '';
-        width: 100px;
-        border-top: 1px solid var(--app-accent-color);
-      }
-
-      @media (min-width: 768px) {
-        :host {
-          background-size: 100%;
-        }
-
-        .container {
-          max-width: 980px;
-        }
-
-        span.desktop-only {
-          display: inline;
-        }
-
-        .section {
-          display: inline-block;
-          box-sizing: border-box;
-          vertical-align: top;
-          width: 40.5%;
-          text-align: left;
-          border-left: 1px solid var(--app-accent-color);
-          padding-left: 40px;
-          padding-bottom:48px;
-        }
-
-        .section.first {
-          margin-right: 19%;
-        }
-
-        .section > h2 {
-          margin-top: 0;
-        }
-
-        .section > p {
-          margin-bottom: 0;
-        }
-
-        .section::before {
-          content: none;
-        }
-      }
-    </style>
-
-    <div class="container">
-      <div class="splash">
-        <h1>
-          
-          <span class="desktop-only">Experiments</span>
-        </h1>
-      </div>
-
-
-      <div class="section first">
-        <h2><a href="https://observablehq.com/d/c3d18938993cb1d3?collection=@justingosses/nasa">Experimental user interface using NLP tags </a></h2>
-        <div style="margin:0 auto;text-align: center">
-                <a href="https://observablehq.com/d/c3d18938993cb1d3?collection=@justingosses/nasa"><img src="images/tag_bubble.png" style="width:200px;"></img></a>
-        </div>
-        <p>
-          An experiment that explores methods for visualizing NASA's open-source code projects using machine-learning generated keyword tags and clustering techniques. Exists as a live, editable, JavaScript + GUI notebook on ObservableHQ.
-        </p>
-      </div>
-      <!-- <div class="section first">
-        <h2><a href="#/tagcluster">Experimental UI Based on NLP Tags</a></h2>
-        <div style="margin:0 auto;text-align: center">
-                <a href="#/tagcluster"><img src="images/tag_bubble.png" style="width:200px;"></img></a>
-        </div>
-        <p>
-            An experiment that explores methods for utilizing data visualization & results of a machine-learning model to provide a better way to explore clustering and aggregate patterns in NASA's open-source code. Includes link to live, editable version.
-        </p>
-      </div> -->
-      <div class="section">
-        <h2><a href="https://observablehq.com/@justingosses/public-engagement-with-nasas-open-source-code-projects-on-g">Which code is most popular with the public? </a></h2>
-        <div style="margin:0 auto;text-align: center">
-                <a href="https://observablehq.com/@justingosses/public-engagement-with-nasas-open-source-code-projects-on-g"><img src="images/popular_code.png" style="width:200px;"></img></a>
-        </div>
-        <p>
-          One way to answer this question, is to tabulate Github statistics for forks, stars, clones, etc. This live, editable notebook on ObservableHQ lets you understand how the public is engaged with NASA code.
-        </p>
-      </div>
-      <div class="section first">
-        <h2><a href="https://observablehq.com/@justingosses/finding-labor-hours-to-generate-opensouce-nasa-code-since-a?collection=@justingosses/nasa">How Many Labor Hours Went Into NASA Open-Source? </a></h2>
-        <div style="margin:0 auto;text-align: center">
-                <a href="https://observablehq.com/@justingosses/finding-labor-hours-to-generate-opensouce-nasa-code-since-a?collection=@justingosses/nasa"><img src="images/laborHours.png" style="width:200px;"></img></a>
-        </div>
-        <p>
-          It is hard to get an exact answer to how many labor hours went into an agency's open-source software. This short notebook acts as an explorable explaination. It lets a user ballpark a likely range given a few assumptions. 
-        </p>
-      </div>
-      <div class="section">
-        <h2><a href="https://observablehq.com/@justingosses/finding-recent-additions-to-code-nasa-gov?collection=@justingosses/nasa">Download All New Code Projects Since A Given Date </a></h2>
-        <div style="margin:0 auto;text-align: center">
-                <a href="https://observablehq.com/@justingosses/finding-recent-additions-to-code-nasa-gov?collection=@justingosses/nasa"><img src="images/downloadSince.png" style="width:200px;"></img></a>
-        </div>
-        <p>
-          There is an astronomy code sharing website that incorporates NASA astronomy related code into their collection. In order to make their job easier, this notebook lets them download all new code of a given license type updated since a certain date.
-        </p>
-      </div>
-    </div>
-  </template>
-
-  <script>Polymer({is:"code-nasa-experiments"});</script>
-</dom-module>
-</body></html>
+<html><head><meta charset="UTF-8"><link rel="import" href="code-nasa-app.html"></head><body><dom-module id="code-nasa-experiments"><template strip-whitespace=""><style include="shared-styles">:host{display:block;background-color:#000;background-image:url('/images/backgrounds/share.jpg');background-repeat:no-repeat;background-position:center top;background-size:250%;font-size:16px;line-height:24px;}span.desktop-only{display:none;}.section{text-align:center;margin-top:4em;}.section::before{display:block;margin:0 auto;content:'';width:100px;border-top:1px solid var(--app-accent-color);}@media (min-width: 768px){:host{background-size:100%;}.container{max-width:980px;}span.desktop-only{display:inline;}.section{display:inline-block;box-sizing:border-box;vertical-align:top;width:40.5%;text-align:left;border-left:1px solid var(--app-accent-color);padding-left:40px;padding-bottom:48px;}.section.first{margin-right:19%;}.section > h2{margin-top:0;}.section > p{margin-bottom:0;}.section::before{content:none;}}</style><div class="container"><div class="splash"><h1><span class="desktop-only">Experiments</span></h1></div><div class="section first"><h2><a href="https://observablehq.com/d/c3d18938993cb1d3?collection=@justingosses/nasa">Experimental user interface using NLP tags</a></h2><div style="margin:0 auto;text-align: center"><a href="https://observablehq.com/d/c3d18938993cb1d3?collection=@justingosses/nasa"><img src="images/tag_bubble.png" style="width:200px;"></a></div><p>An experiment that explores methods for visualizing NASA's open-source code projects using machine-learning generated keyword tags and clustering techniques. Exists as a live, editable, JavaScript + GUI notebook on ObservableHQ.</p></div><div class="section"><h2><a href="https://observablehq.com/@justingosses/public-engagement-with-nasas-open-source-code-projects-on-g">Which code is most popular with the public?</a></h2><div style="margin:0 auto;text-align: center"><a href="https://observablehq.com/@justingosses/public-engagement-with-nasas-open-source-code-projects-on-g"><img src="images/popular_code.png" style="width:200px;"></a></div><p>One way to answer this question, is to tabulate Github statistics for forks, stars, clones, etc. This live, editable notebook on ObservableHQ lets you understand how the public is engaged with NASA code.</p></div><div class="section first"><h2><a href="https://observablehq.com/@justingosses/finding-labor-hours-to-generate-opensouce-nasa-code-since-a?collection=@justingosses/nasa">How Many Labor Hours Went Into NASA Open-Source?</a></h2><div style="margin:0 auto;text-align: center"><a href="https://observablehq.com/@justingosses/finding-labor-hours-to-generate-opensouce-nasa-code-since-a?collection=@justingosses/nasa"><img src="images/laborHours.png" style="width:200px;"></a></div><p>It is hard to get an exact answer to how many labor hours went into an agency's open-source software. This short notebook acts as an explorable explaination. It lets a user ballpark a likely range given a few assumptions.</p></div><div class="section"><h2><a href="https://observablehq.com/@justingosses/finding-recent-additions-to-code-nasa-gov?collection=@justingosses/nasa">Download All New Code Projects Since A Given Date</a></h2><div style="margin:0 auto;text-align: center"><a href="https://observablehq.com/@justingosses/finding-recent-additions-to-code-nasa-gov?collection=@justingosses/nasa"><img src="images/downloadSince.png" style="width:200px;"></a></div><p>There is an astronomy code sharing website that incorporates NASA astronomy related code into their collection. In order to make their job easier, this notebook lets them download all new code of a given license type updated since a certain date.</p></div></div></template><script>Polymer({is:"code-nasa-experiments"});</script></dom-module></body></html>
