--- a/src/code-nasa-related.html
+++ b/src/code-nasa-related.html
@@ -1,141 +1,1 @@
-<html><head><meta charset="UTF-8"><link rel="import" href="code-nasa-app.html"></head><body><dom-module id="code-nasa-related">
-  <template strip-whitespace="">
-    <style include="shared-styles">
-      :host {
-        display: block;
-        background-color: #000;
-        background-image: url('/images/backgrounds/share.jpg');
-        background-repeat: no-repeat;
-        background-position: center top;
-        background-size: 250%;
-        font-size: 16px;
-        line-height: 24px;
-      }
-
-      span.desktop-only {
-        display: none;
-      }
-
-      .section {
-        text-align: center;
-        margin-top:4em;
-      }
-
-      .section::before {
-        display: block;
-        margin: 0 auto;
-        content: '';
-        width: 100px;
-        border-top: 1px solid var(--app-accent-color);
-      }
-
-      @media (min-width: 768px) {
-        :host {
-          background-size: 100%;
-        }
-
-        .container {
-          max-width: 980px;
-        }
-
-        span.desktop-only {
-          display: inline;
-        }
-
-        .section {
-          display: inline-block;
-          box-sizing: border-box;
-          vertical-align: top;
-          width: 40.5%;
-          text-align: left;
-          border-left: 1px solid var(--app-accent-color);
-          padding-left: 40px;
-          padding-bottom:48px;
-        }
-
-        .section.first {
-          margin-right: 19%;
-        }
-
-        .section > h2 {
-          margin-top: 0;
-        }
-
-        .section > p {
-          margin-bottom: 0;
-        }
-
-        .section::before {
-          content: none;
-        }
-      }
-    </style>
-
-    <div class="container" itemscope itemtype="https://code.nasa.gov/#/related">
-      <div class="splash">
-        <h1>
-          Related
-          <span class="desktop-only" itemprop="resources">Resources</span>
-        </h1>
-      </div>
-
-      <!-- <div class="section first" itemprop="Open Innovation">
-        <h2><a itemprop="url" href="https://open.nasa.gov/">Open-data & Open-APIs & Open-Outreach</a></h2>
-        <p>
-          <a href="https://open.nasa.gov/">Open.nasa.gov</a> is a central place for websites run by NASA's Open Innovation program. From here you can go to open <a itemprop="url" href="https://data.nasa.gov/browse"> data</a>, open <a itemprop="url" href="https://api.nasa.gov">APIs</a>, information on open-data centric outreach programs like datanauts and <a itemprop="url" href="https://2019.spaceappschallenge.org">SpaceApps hackathon</a>, as well as <a itemprop="url" href="https://open.nasa.gov/open-gov/">information</a> on how we meet open-government related mandates. 
-        </p>
-      </div> -->
-
-      <div class="section" itemprop="NASA Software">
-        <h2><a itemprop="url" href="https://software.nasa.gov/">Open-to-only-government-code</a></h2>
-        <p itemprop="description">
-          Not all releasable code is open-source code. NASA also has government source code that is only sharable with other US government agencies. If you don't find what you're looking for among the open-source on code.nasa.gov, check out <a itemprop="url" href="https://software.nasa.gov/">Software.NASA.Gov</a>, which is run by the Technology Transfer office and has government source code in addition to open source software.
-        </p>
-      </div>
-      <div class="section first" itemprop="Dashlink">
-          <h2><a itemprop="url" href="https://c3.nasa.gov/dashlink/">Dashlink: Algorithm & Model Sharing</a></h2>
-          <p itemprop="description">
-              <a href="https://c3.nasa.gov/dashlink/">DASHlink</a> is a collaborative sharing network for researchers in the Data Mining and Systems Health fields. On DASHlink you can create a public member profile, share papers, algorithms, and datasets, and utilize tools like wikis and blogs to collaborate.
-          </p>
-      </div>
-      <div class="section" itemprop="NASA Challenges">
-        <h2><a itemprop="url" href="https://www.nasa.gov/offices/oct/openinnovation/aboutus">NASA's Challenges and Prizes</a></h2>
-        <p itemprop="description">
-          NASA has several programs for putting out data analysis and technology development contests and challenges to public. Centennial Challenge Program, NASA Tournament Lab, Challenge.gov, and NASA’s Center of Excellence for Collaborative Innovation are linked to from <a itemprop="url" href="https://www.nasa.gov/offices/oct/openinnovation/aboutus/">this</a> page.
-        </p>
-      </div>
-      
-      <div class="container" itemscope itemtype="https://code.nasa.gov/#/related" style="padding-bottom: 2em;">
-        <!-- <div class="splash"> -->
-        <div>
-          <h1 style="margin:4em auto; text-align: center;">
-            
-            <span class="desktop-only" itemprop="resources">Code & Data For This Site</span>
-          </h1>
-        </div>
-      </div>
-      <div class="section first" itemprop="API">
-        <h2><a itemprop="url" href="https://developers.code.gov/basics.html">Code.gov API</a></h2>
-        <p itemprop="description">
-          If you would like to interact with the data on this page through an API, we suggest you check out the code.gov <a itemprop="url" href="https://developers.code.gov/basics.html">API</a>. You can programmatically interact with all NASA open-source projects & open-source code from every federal agency.
-        </p>
-      </div>
-      <div class="section" itemprop="Observable">
-        <h2><a itemprop="url" href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">All code projects in a single JSON</a></h2>
-        <p itemprop="description">
-          The projects page of code.nasa.gov is built from data in <a itemprop="url" href="https://raw.githubusercontent.com/nasa/code-nasa-gov/master/data/catalog.json">catalog.json</a>, available on github. NASA projects on code.gov are harvested from <a itemprop="url" href="https://raw.githubusercontent.com/nasa/Open-Source-Catalog/master/code.json">code.JSON</a>, also on github. You can interact with both <a itemprop="url" href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">here</a> inside a live Observable code notebook editable in JavaScript.
-        </p>
-      </div>
-      <div class="section first" itemprop="Source Code">
-          <h2><a itemprop="url" href="https://github.com/nasa/code-nasa-gov">Source code for Code.nasa.gov</a></h2>
-          <p itemprop="description">
-            If you find a mistake on this page, you can submit a change by contributing an issue or pull request to <a  itemprop="url" href="https://github.com/nasa/code-nasa-gov">the public github repository</a> that holds this page's source code. If you find any mistakes in the `A.I. generated tags` on this website's <a 
-            itemprop="url" href="https://code.nasa.gov/#/">projects page</a>, we'd like to know about it.
-          </p>
-        </div>
-    </div>
-  </template>
-
-  <script>Polymer({is:"code-nasa-related"});</script>
-</dom-module>
-</body></html>
+<html><head><meta charset="UTF-8"><link rel="import" href="code-nasa-app.html"></head><body><dom-module id="code-nasa-related"><template strip-whitespace=""><style include="shared-styles">:host{display:block;background-color:#000;background-image:url('/images/backgrounds/share.jpg');background-repeat:no-repeat;background-position:center top;background-size:250%;font-size:16px;line-height:24px;}span.desktop-only{display:none;}.section{text-align:center;margin-top:4em;}.section::before{display:block;margin:0 auto;content:'';width:100px;border-top:1px solid var(--app-accent-color);}@media (min-width: 768px){:host{background-size:100%;}.container{max-width:980px;}span.desktop-only{display:inline;}.section{display:inline-block;box-sizing:border-box;vertical-align:top;width:40.5%;text-align:left;border-left:1px solid var(--app-accent-color);padding-left:40px;padding-bottom:48px;}.section.first{margin-right:19%;}.section > h2{margin-top:0;}.section > p{margin-bottom:0;}.section::before{content:none;}}</style><div class="container" itemscope="" itemtype="https://code.nasa.gov/#/related"><div class="splash"><h1>Related <span class="desktop-only" itemprop="resources">Resources</span></h1></div><div class="section" itemprop="NASA Software"><h2><a itemprop="url" href="https://software.nasa.gov/">Open-to-only-government-code</a></h2><p itemprop="description">Not all releasable code is open-source code. NASA also has government source code that is only sharable with other US government agencies. If you don't find what you're looking for among the open-source on code.nasa.gov, check out <a itemprop="url" href="https://software.nasa.gov/">Software.NASA.Gov</a>, which is run by the Technology Transfer office and has government source code in addition to open source software.</p></div><div class="section first" itemprop="Dashlink"><h2><a itemprop="url" href="https://c3.nasa.gov/dashlink/">Dashlink: Algorithm &amp; Model Sharing</a></h2><p itemprop="description"><a href="https://c3.nasa.gov/dashlink/">DASHlink</a> is a collaborative sharing network for researchers in the Data Mining and Systems Health fields. On DASHlink you can create a public member profile, share papers, algorithms, and datasets, and utilize tools like wikis and blogs to collaborate.</p></div><div class="section" itemprop="NASA Challenges"><h2><a itemprop="url" href="https://www.nasa.gov/offices/oct/openinnovation/aboutus">NASA's Challenges and Prizes</a></h2><p itemprop="description">NASA has several programs for putting out data analysis and technology development contests and challenges to public. Centennial Challenge Program, NASA Tournament Lab, Challenge.gov, and NASA’s Center of Excellence for Collaborative Innovation are linked to from <a itemprop="url" href="https://www.nasa.gov/offices/oct/openinnovation/aboutus/">this</a> page.</p></div><div class="container" itemscope="" itemtype="https://code.nasa.gov/#/related" style="padding-bottom: 2em;"><div><h1 style="margin:4em auto; text-align: center;"><span class="desktop-only" itemprop="resources">Code &amp; Data For This Site</span></h1></div></div><div class="section first" itemprop="API"><h2><a itemprop="url" href="https://developers.code.gov/basics.html">Code.gov API</a></h2><p itemprop="description">If you would like to interact with the data on this page through an API, we suggest you check out the code.gov <a itemprop="url" href="https://developers.code.gov/basics.html">API</a>. You can programmatically interact with all NASA open-source projects &amp; open-source code from every federal agency.</p></div><div class="section" itemprop="Observable"><h2><a itemprop="url" href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">All code projects in a single JSON</a></h2><p itemprop="description">The projects page of code.nasa.gov is built from data in <a itemprop="url" href="https://raw.githubusercontent.com/nasa/code-nasa-gov/master/data/catalog.json">catalog.json</a>, available on github. NASA projects on code.gov are harvested from <a itemprop="url" href="https://raw.githubusercontent.com/nasa/Open-Source-Catalog/master/code.json">code.JSON</a>, also on github. You can interact with both <a itemprop="url" href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">here</a> inside a live Observable code notebook editable in JavaScript.</p></div><div class="section first" itemprop="Source Code"><h2><a itemprop="url" href="https://github.com/nasa/code-nasa-gov">Source code for Code.nasa.gov</a></h2><p itemprop="description">If you find a mistake on this page, you can submit a change by contributing an issue or pull request to <a itemprop="url" href="https://github.com/nasa/code-nasa-gov">the public github repository</a> that holds this page's source code. If you find any mistakes in the `A.I. generated tags` on this website's <a itemprop="url" href="https://code.nasa.gov/#/">projects page</a>, we'd like to know about it.</p></div></div></template><script>Polymer({is:"code-nasa-related"});</script></dom-module></body></html>
