--- a/src/code-nasa-share.html
+++ b/src/code-nasa-share.html
@@ -1,102 +1,1 @@
-<html><head><meta charset="UTF-8"><link rel="import" href="code-nasa-app.html"></head><body><dom-module id="code-nasa-share">
-  <template strip-whitespace="">
-    <style include="shared-styles">
-      :host {
-        display: block;
-        background-color: #000;
-        background-image: url('/images/backgrounds/share.jpg');
-        background-repeat: no-repeat;
-        background-position: center top;
-        background-size: 250%;
-        font-size: 16px;
-        line-height: 24px;
-      }
-
-      span.desktop-only {
-        display: none;
-      }
-
-      .section {
-        text-align: center;
-      }
-
-      .section::before {
-        display: block;
-        margin: 0 auto;
-        content: '';
-        width: 100px;
-        border-top: 1px solid var(--app-accent-color);
-      }
-
-      @media (min-width: 768px) {
-        :host {
-          background-size: 100%;
-        }
-
-        .container {
-          max-width: 980px;
-        }
-
-        span.desktop-only {
-          display: inline;
-        }
-
-        .section {
-          display: inline-block;
-          box-sizing: border-box;
-          vertical-align: top;
-          width: 40.5%;
-          text-align: left;
-          border-left: 1px solid var(--app-accent-color);
-          padding-left: 40px;
-        }
-
-        .section.first {
-          margin-right: 19%;
-        }
-
-        .section > h2 {
-          margin-top: 0;
-        }
-
-        .section > p {
-          margin-bottom: 0;
-        }
-
-        .section::before {
-          content: none;
-        }
-      }
-    </style>
-
-    <div class="container" itemscope itemtype="https://code.nasa.gov/#/related">
-      <div class="splash">
-        <h1 itemprop="Share Code">
-          Share
-          <span class="desktop-only">your Code</span>
-        </h1>
-      </div>
-
-      <div class="section first" itemprop="NASA Developers">
-        <h2>NASA developers:</h2>
-        <p>
-          Thanks for your interest in sharing your code! If you are a developer employed by NASA or a
-          NASA contractor and have open source code you wish to host on the NASA GitHub repository, check out the <a href="https://code.nasa.gov/#/guide"> guide page</a> or email us at <a href="mailto:opensource@lists.nasa.gov" target="_blank">opensource@lists.nasa.gov</a>.
-        </p>
-      </div>
-
-      <div class="section" itemprop="Affiliates">
-        <h2>Non-NASA affiliates:</h2>
-        <p>
-          We encourage
-          you to clone, fork, modify, break, and improve the code that we've released thus far.
-          We're still working out the proper methods to take user contributions to our code and
-          will provide information on how to do so as it develops.
-        </p>
-      </div>
-    </div>
-  </template>
-
-  <script>Polymer({is:"code-nasa-share"});</script>
-</dom-module>
-</body></html>
+<html><head><meta charset="UTF-8"></head><body><dom-module id="code-nasa-share"><template strip-whitespace=""><style include="shared-styles">:host{display:block;background-color:#000;background-image:url('/images/backgrounds/share.jpg');background-repeat:no-repeat;background-position:center top;background-size:250%;font-size:16px;line-height:24px;}span.desktop-only{display:none;}.section{text-align:center;}.section::before{display:block;margin:0 auto;content:'';width:100px;border-top:1px solid var(--app-accent-color);}@media (min-width: 768px){:host{background-size:100%;}.container{max-width:980px;}span.desktop-only{display:inline;}.section{display:inline-block;box-sizing:border-box;vertical-align:top;width:40.5%;text-align:left;border-left:1px solid var(--app-accent-color);padding-left:40px;}.section.first{margin-right:19%;}.section > h2{margin-top:0;}.section > p{margin-bottom:0;}.section::before{content:none;}}</style><div class="container" itemscope="" itemtype="https://code.nasa.gov/#/related"><div class="splash"><h1 itemprop="Share Code">Share <span class="desktop-only">your Code</span></h1></div><div class="section first" itemprop="NASA Developers"><h2>NASA developers:</h2><p>Thanks for your interest in sharing your code! If you are a developer employed by NASA or a NASA contractor and have open source code you wish to host on the NASA GitHub repository, check out the <a href="https://code.nasa.gov/#/guide">guide page</a> or email us at <a href="mailto:opensource@lists.nasa.gov" target="_blank">opensource@lists.nasa.gov</a>.</p></div><div class="section" itemprop="Affiliates"><h2>Non-NASA affiliates:</h2><p>We encourage you to clone, fork, modify, break, and improve the code that we've released thus far. We're still working out the proper methods to take user contributions to our code and will provide information on how to do so as it develops.</p></div></div></template><script>Polymer({is:"code-nasa-share"});</script></dom-module></body></html>
